[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Load_dialog.gd" type="Script" id=1]

[node name="LoadDialog" type="WindowDialog"]

margin_left = 2.0
margin_top = 22.0
margin_right = 402.0
margin_bottom = 172.0
rect_min_size = Vector2( 400, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Load game"
resizable = false
script = ExtResource( 1 )
_sections_unfolded = [ "Popup", "Rect", "custom_fonts" ]
save_list = NodePath("HBoxContainer/List")
savegame_name = NodePath("HBoxContainer/VBoxContainer/savegame_name")
stage_name = NodePath("HBoxContainer/VBoxContainer/stage_name")
date = NodePath("HBoxContainer/VBoxContainer/date")

[node name="HBoxContainer" type="HBoxContainer" parent="."]

anchor_right = 1
anchor_bottom = 1
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="List" type="ItemList" parent="HBoxContainer"]

margin_right = 175.0
margin_bottom = 200.0
rect_min_size = Vector2( 175, 200 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_rmb_select = true
icon_mode = 1
_sections_unfolded = [ "Columns", "Icon", "Rect" ]

[node name="Spacer" type="Control" parent="HBoxContainer"]

margin_left = 179.0
margin_right = 199.0
margin_bottom = 200.0
rect_min_size = Vector2( 20, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]

margin_left = 203.0
margin_right = 368.0
margin_bottom = 200.0
rect_min_size = Vector2( 165, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer"]

margin_right = 165.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 15.0
margin_right = 165.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Savegame name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="savegame_name" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 34.0
margin_right = 165.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "    Unknown"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 53.0
margin_right = 165.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Stage"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stage_name" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 72.0
margin_right = 165.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "    Unknown"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 91.0
margin_right = 165.0
margin_bottom = 105.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Date"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="date" type="Label" parent="HBoxContainer/VBoxContainer"]

margin_top = 110.0
margin_right = 165.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "    Unknown"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spacer2" type="Control" parent="HBoxContainer/VBoxContainer"]

margin_top = 129.0
margin_right = 165.0
margin_bottom = 139.0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]

margin_top = 144.0
margin_right = 165.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Refresh"
flat = false
_sections_unfolded = [ "Rect" ]

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]

margin_top = 169.0
margin_right = 165.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
_sections_unfolded = [ "Rect" ]

[connection signal="item_selected" from="HBoxContainer/List" to="." method="_on_List_item_selected"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="refresh"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="load_game"]


